# etl-101-data-spark

./: README.md  pyproject.toml
app/: extract.py  load.py  transform.py
